# tetris

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
src/gadget/: mod.rs  rsa.rs  sha256.rs
src/gadget/big_field/: crt.rs  crt_var.rs  mod.rs  num.rs  rns.rs  test.rs
src/gadget/ecc/: compat.rs  ecc_base_field.rs  ecc_general.rs  ecdsa.rs  mod.rs  msm.rs  test.rs
src/gadget/ecc/bn_pairing/: e12.rs  e2.rs  e6.rs  halo2.rs  mod.rs  witness.rs
src/gadget/ecc/bw6/: e3.rs  e6.rs  halo2.rs  mod.rs  witness.rs
src/gadget/poseidon/: compress.rs  mod.rs  parameters.rs  reference.rs  sponge.rs  test.rs
src/gadget/poseidon/reference/: compress.rs  grain.rs  mod.rs  poseidon.rs  sponge.rs
src/halo2/: acc.rs  bitwise.rs  config.rs  mem_static.rs  mem_write_once.rs  mod.rs  pi.rs  pow5.rs  range.rs  select.rs  test.rs
src/ir/: ac.rs  bitwise.rs  inspect.rs  mem.rs  mod.rs  pow5.rs  range.rs  select.rs  test.rs
src/ir/combination/: linear.rs  mod.rs  quad.rs
src/witness/: binops.rs  compat.rs  field.rs  mod.rs  value.rs
